Atualização dos Controllers
-Finalização do CRUD disciplinas.
-Ajuste dos layouts
-Revisao na BD
-Atualização do relatório

--- a/GestorHorario/GestorHorario/Views/BackOffice/Registar.cshtml
+++ b/GestorHorario/GestorHorario/Views/BackOffice/Registar.cshtml
@@ -36,6 +36,15 @@
                </select>
             </div>
 
+            
+            <div class="form-group">
+                <label asp-for="Ano">Qual o ano curricular:</label>
+                <select asp-for="Ano">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+            </div>
 
             <button type="submit" class="btn btn-default">Registar</button>
         </form>
