Criacao de roles
-Criação de roles;
-Criação de controllers para visualizar estudantes, visualizar horarios.

--- a/Horarios/Horarios/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Horarios/Horarios/Areas/Identity/Pages/Account/Login.cshtml
@@ -37,7 +37,7 @@
                 </div>
                 <div class="form-group">
                     <p>
-                        <a asp-page="./ForgotPassword">Forgot your password?</a>
+                        <a asp-page="./ForgotPassword">Esqueceu a sua password?</a>
                     </p>
                     @*<p>
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
