--- a/Horarios/Horarios/Views/Backoffice/Disciplinas.cshtml
+++ b/Horarios/Horarios/Views/Backoffice/Disciplinas.cshtml
@@ -51,7 +51,7 @@
                 });
             },
             error: function (error) {
-                alert('failed');
+                alert('Erro');
             }
         });
 
