--- a/Horarios/Horarios/Views/Shared/_Layout.cshtml
+++ b/Horarios/Horarios/Views/Shared/_Layout.cshtml
@@ -101,11 +101,30 @@
                                     <a href="/backoffice/disciplinas">Adicionar Disciplina</a>
                                 </li>
                                 <li>
-                                    <a href="#">Visualizar Disciplinas</a>
+                                    <a href="/backoffice/mostrardisciplinas">Visualizar Disciplinas</a>
                                 </li>
                             </ul>
                         </li>
-
+                        <li>
+                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i>Utilizadores<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="/backoffice/mostrarestudantes">Visualizar Estudantes</a>
+                                </li>
+                                <li>
+                                    <a href="/backoffice/mostrarprofessores">Visualizar Professores</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i>Horarios<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="#">Visualizar Provas</a>
+                                </li>
+                                
+                            </ul>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
